--- a/.github/workflows/generate_glog_readme.yml
+++ b/.github/workflows/generate_glog_readme.yml
@@ -1,3 +1,10 @@
+name: Generate README.md
+
+on:
+  workflow_dispatch:
+  issues:
+    types: [opened, edited]
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
