--- a/.github/workflows/generate_glog_readme.yml
+++ b/.github/workflows/generate_glog_readme.yml
@@ -3,7 +3,7 @@ name: Generate README.md
 on:
   workflow_dispatch:
   issues:
-    types: [opened, edited, deleted, labeled, unlabeled]
+    types: [opened, deleted]
 
 env:
   GITHUB_NAME: susucain
